CrOS shelf: more fine grained forwarding of gestures from overflow

Currently, most gestures on the overflow shelf are completely ignored.
This causes (among other things) the two bugs linked from this CL
because gestures trying to reorder icons, or after a long press event,
are ignored.

The main reason for the special casing is that we don't want gestures
on the overflow shelf to cause showing the app list, or to drag the
shelf itself when it's an autohide shelf.

However, ignoring all gestures is overkill. This CL handles gestures
in a more fine grained way:

* The app list cannot be shown by swiping up from the shelf when the
  overflow shelf is shown. The change here is that one could initially
  swipe up from the main shelf even when the overflow shelf was shown.
  Now the overflow shelf needs to be hidden first. The previous
  behavior could arguably be seen as a bug because one could get a
  full screen app list while the overflow menu was still being shown,
  which looked quite strange.
* The shelf cannot be dragged up or down (in the case of an autohide
  shelf) when the overflow shelf is shown. Previously, one could drag
  the shelf while overflow was open (just not by performing the gesture
  on the overflow shelf itself). This resulted in behaviors where the
  whole "shelf + overflow" could be dragged up or down. Now, the
  overflow shelf will be dismissed first. One could argue either way,
  but I would consider the change a good change.
* All other gestures are handled in the overflow shelf in the same way
  as the main shelf.

Bug: 882991, 905121
Change-Id: I9269b9a0943f4aa39aa26d4d339cbbfa80b51135
Reviewed-on: https://chromium-review.googlesource.com/c/1343659
Commit-Queue: Manu Cornet <manucornet@chromium.org>
Reviewed-by: Mitsuru Oshima (OOO till 11/26) <oshima@chromium.org>
Cr-Commit-Position: refs/heads/master@{#610409}
Former-commit-id: fa530e337014a0995717927bf99c6586c6b7b3a4